2001-05-16  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-dtree.el (w3m-dtree-create): Fix HTML bug.

2001-05-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-cache-underline-faces): Added docs that it is
	currently needed for only pretest versions of Emacs 21.
	(w3m-fontify-anchors): Don't fontify the trailing white spaces of a
	href.
	* w3m-xmas.el (w3m-insert-image): Don't handle underline faces.
	* w3m-e21.el (w3m-insert-image): Simplified.

2001-05-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-setup-header-line, w3m-exec, w3m-decode-entities):
	Replace `add-text-properties' with `w3m-add-text-properties'.
	(w3m-fontify-images, w3m-fontify-anchors): Ditto.
	(w3m-setup-header-line, w3m-cache-contents, w3m-refontify-anchor):
	Replace `put-text-property' with `w3m-add-text-properties'.
	(w3m-toggle-inline-images, w3m-fontify-anchors): Ditto.
	(w3m-fontify-underline, w3m-fontify-bold): Ditto.
	(w3m-add-text-properties): New macro used to put non-sticky text
	properties.

	* w3m-xmas.el (w3m-setup-header-line): Don't put non-sticky text
	property here.

2001-05-16  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (mew-w3m): Typo fix.

2001-05-16  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-bookmark.el (w3m-bookmark-default-section): Changed
	initialization order.

2001-05-16  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-dtree.el (w3m-dtree-create): Modify warning message.
	(w3m-about-dtree): Set path to directory name.

2001-05-16  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el, w3m-antenna.el, w3m-bookmark.el, w3m-dtree.el,
	w3m-search.el, w3m-weather.el: Fixed document strings of
	functions.

	* mew-w3m.el (mew-w3m): New customize group.
	(mew-use-w3m-minor-mode): Use defcustom.
	(mew-w3m-auto-insert-image): Use defcustom.

2001-05-16  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-goto-url): Set 'default-directory' to
	'w3m-profile-directory', if 'url' is local but not exist that directory.
